working registration and login system