@@ -1,6 +1,8 @@
 package com.company.naspolke.service;
 
+import com.company.naspolke.model.Role;
 import com.company.naspolke.model.User;
+import com.company.naspolke.model.types.RoleType;
 import com.company.naspolke.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -9,6 +11,7 @@ import org.springframework.stereotype.Service;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static java.util.UUID.randomUUID;
 
@@ -25,9 +28,9 @@ public class UserServiceImplementation implements UserService {
     @Override
     public void registerUser(User user) {
         userRepository.save(new User(
-                randomUUID(), user.getUserName(), user.getUserSurname(),
-                user.getUserEmail(), user.getUserPassword(),
-                true, true, Collections.singleton(new SimpleGrantedAuthority("ROLE_USER"))));
+                randomUUID(), user.getUserName(), user.getUserSurname(), user.getUserEmail(), user.getUserPassword(),
+                true, false, Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")),
+                Set.of()));
     }
 
     @Override
